--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 APP_BOT_TOKEN=
 DB_URL=
+CLOUDFLARE_S3_API_URL=
+CLOUDFLARE_S3_ACCESS_KEY=
+CLOUDFLARE_S3_SECRET_ACCESS_KEY=
+# 最後はスラッシュで終わるようにしてください
+CLOUDFLARE_URL=https://example.com/
+SUPABASE_JWT_SECRET=
