--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ DB_URL=
 CLOUDFLARE_S3_API_URL=
 CLOUDFLARE_S3_ACCESS_KEY=
 CLOUDFLARE_S3_SECRET_ACCESS_KEY=
-# 最後はスラッシュで終わるようにしてください
-CLOUDFLARE_URL=https://example.com/
 SUPABASE_JWT_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_PRO_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
+# URLの最後はスラッシュで終わるようにしてください
+CLOUDFLARE_URL=https://example.com/
+FRONTEND_URL=https://example.com/
