--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ SUPABASE_JWT_SECRET=
 STRIPE_SECRET_KEY=
 STRIPE_PRO_PRICE_ID=
 STRIPE_WEBHOOK_SECRET=
-# URLの最後はスラッシュで終わるようにしてください
-CLOUDFLARE_URL=https://example.com/
-FRONTEND_URL=https://example.com/
+# URLの最後はスラッシュをつけません
+CLOUDFLARE_URL=https://example.com
+FRONTEND_URL=https://example.com
